--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,8 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -118,9 +119,6 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
@@ -155,9 +153,26 @@ bar {
         status_command i3status
 }
 
-bindsym $mod+Shift+x exec i3lock
-
 # install pm-utils
 # sudo pm-suspend
 
 for_window [class="Gimp"] floating disable
+
+# System mode:
+set $mode_system System: [Pause] [s]uspend [r]estart [l]ogout, [Esc/Menu] 
+bindsym Menu mode "$mode_system"
+
+mode "$mode_system" {
+    # Pause - lock:
+    bindsym Pause exec i3lock, mode "default"
+    # s - suspend (and lock):
+    bindsym s exec i3lock && systemctl suspend, mode "default"
+    # r - restart i3:
+    # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+    bindsym r restart
+    # l - log out:
+    bindsym l exec i3-msg exit
+    # Escape, Menu - return to default:
+    bindsym Escape mode "default"
+    bindsym Menu mode "default"
+}
